css/style.css
/* ... */
h1,h2,h3,h4,h5,h6 {
  line-height: 28px;
}

h2,h3,h4,h5 {
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
  color: #19294D;
}

h1 {
  font-size: 70;
}

h2 {
  font-size: 60px;
}

h3 {
  font-size: 32px;
  line-height: 40px;
  padding-top: 40px;
  padding-bottom: 30px;
}

h4 {
  font-size: 28px;
  line-height: 32px;
  padding-top: 30px;
  padding-bottom: 25px;
}

h5 {
  font-size: 20px;
  line-height: 28px;
  padding-top: 20px;
  padding-bottom: 15px;
}

h6 {
  font-size: 17px;
  line-height: 22px;
  padding-top: 20px;
  padding-bottom: 15px;
  font-weight: 700;
}

h2.love,h3.love,h4.love,h5.love,h6.love {
  font-weight: 700;
  color: #0f6fa9;
  background-image: url(../img/h-back.png);
  background-repeat: no-repeat;
  background-position: center bottom;
  padding-bottom: 20px;
  text-align: center;
  margin-bottom: 30px;
}

h2.love {
  font-size: 40px;
}

h3.love {
  font-size: 28px;
}

h4.love {
  font-size: 24px;
}

h6.love {
  font-size: 18px;
}

h4.color {
  font-size: 28px;
  background-color: #001C6F;
  display: block;
  padding: 20px;
  color: #FFF;
  margin-bottom: 30px;
}

h4.color90 {
  font-size: 18px;
  display: block;
  padding: 15px;
  margin-bottom: 25px;
  font-weight: 400;
}

p {
  padding-top: 8px;
  padding-bottom: 8px;
}

a {
  font-weight: 700;
  color: #08507f;
  text-decoration: none;
}

a:hover {
  color: #0099FF;
}

.colw_12 p:first-of-type, .colw_8 p:first-of-type, .colw_7 p:first-of-type, .colw_6 p:first-of-type {
  font-family: 'Roboto Slab', serif;
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 17px;
  line-height: 26px;
  font-weight: 400;
}

strong {
  font-weight: 700;
}

.center {
  text-align: center;
}

.padd {
  padding-right: 2%;
  padding-left: 2%;
}

.paddr {
  padding-right: 2%;
}

.paddtop5 {
  padding-top: 5%;
}

.paddbott50 {
  padding-bottom: 50px;
}

.padd5555 {
  padding: 5%;
}

.paddbott100 {
  padding-bottom: 100px;
}

.paddtop100 {
  padding-top: 100px;
}

.paddtop105 {
  padding-top: 100px;
  padding-right: 5%;
  padding-bottom: 5%;
  padding-left: 5%;
}

.box66 {
  width: 66%;
  margin-right: auto;
  margin-left: auto;
}

.box80 {
  width: 80%;
  margin-right: auto;
  margin-left: auto;
}

.box90 {
  width: 90%;
  margin-right: auto;
  margin-left: auto;
}

.backimg {
  no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
/* TRANSITION BACKGROUN COLOR */
* {
  -webkit-transition: background-color 0.5s ease;
  ;
  -moz-transition: background-color 0.5s ease;
  ;
  -ms-transition: background-color 0.5s ease;
  ;
  -o-transition: background-color 0.5s ease;
  ;
}
/* styles */
.hero100 {
  position: relative;
  height: 100vh;
  width: 100%;
}

.hero {
  position: relative;
  height: 100vh;
  width: 100%;
  background-color: #1F2535;
  background: url(../images/code-wallpaper.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding-top: 10%;
}

section {
  width: 100%;
  position: relative;
}

#section-2 {
  padding-top: 150px;
}

#section-3 {
  min-height: 100vh;
  width: 100%;
  background-color: #141C31;
  background: url(../images/opatija3.jpg);
}

#section-4 {
  padding-top: 50px;
}

#section-5 {
  padding-top: 120px;
}

#section-7 {
  background-color: #F6F6F6;
  background-image: url(../images/sec7.jpg);
}
/* INTRO TITLE */

h1#title-1 {
  text-align: center;
  color: rgba(250, 250, 250, 0.9);
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  letter-spacing: 2px;
  line-height: 50px;
  font-style: normal;
  font-weight: 100;
}

#title-1 em {
  font-family: 'Roboto';
  font-size: 100px;
  text-transform: uppercase;
  letter-spacing: 5px;
  display: block;
  font-style: normal;
  padding-top: 15px;
  text-shadow: 0.07em 0.07em 0 rgba(0, 0, 0, 0.2);
  -webkit-perspective: 1000;
  perspective: 1000;
}

#title-1 em::before,
#title-1 em::after {
  content: "§";
  display: inline-block;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  opacity: 0.2;
  margin: 0 16px;
  font-size: 40px;
}

#title-1 em span {
  display: inline-block;
  -webkit-animation: flip 8s cubic-bezier(0.0, 0.0, 0.58, 1.0) infinite;
  animation: flip 8s cubic-bezier(0.0, 0.0, 0.58, 1.0) infinite;
}

/* ARROW DOWN */
.fixbottarro {
  height: 150px;
  width: 100%;
  position: absolute;
  bottom: 0px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -o-transform: translateX(-50%);
  transform: translateX(-50%);
}

.fixbottarro a {
  text-indent: -2222px;
}

a.scroll {
  display: inline-block;
  font-size: 1.3em;
  height: 32px;
  width: 32px;
}

a.scroll:hover {
  text-decoration-color: -moz-use-text-color;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  -webkit-text-decoration-style: solid;
  text-decoration-style: solid;
}

a.scroll::after {
  -webkit-animation-delay: 0;
  animation-delay: 0;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-name: arrow;
  animation-name: arrow;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-timing-function: ease;
  animation-timing-function: ease;
  content: "";
  height: 32px;
  left: 0;
  position: absolute;
  right: 0;
  top: 10px;
  width: 32px;
  border-bottom-color: #D90000;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-right-color: #D90000;
  border-right-style: solid;
  border-right-width: 2px;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  margin: auto;
}
/* ... */

